--- a/css/main.scss
+++ b/css/main.scss
@@ -11,9 +11,10 @@
 @import "sass/components/header";
 @import "sass/components/main";
 @import "sass/components/courses";
-@import "sass/components/influencer";
 @import "sass/components/blog";
+@import "sass/components/influencer";
 @import "sass/components/form";
+@import "sass/components/success";
 @import "sass/components/footer";
 @import "sass/components/blog-page";
 @import "sass/components/post";
