--- a/css/sass/components/_form.scss
+++ b/css/sass/components/_form.scss
@@ -1,6 +1,7 @@
 /*                              form-section                    */
 .form-section {
   margin-top: 100px;
+  min-height: 55vh;
 }
 .create-form {
   width: 504px;
