--- a/css/main.css
+++ b/css/main.css
@@ -1752,6 +1752,7 @@ html[dir="ltr"] .second-btn {
 /*                              form-section                    */
 .form-section {
   margin-top: 100px;
+  min-height: 55vh;
 }
 
 .create-form {
@@ -2321,7 +2322,7 @@ textarea.form-input {
   outline: none;
   background-image: -webkit-gradient(linear, left top, right top, from(#a946b3), color-stop(#676ff1), color-stop(#676ff1), to(#a946b3));
   background-image: linear-gradient(to right, #a946b3, #676ff1, #676ff1, #a946b3);
-  background-size: 300% 100%;
+  background-size: 400% 100%;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -2346,9 +2347,9 @@ select {
 }
 
 .select2-container .select2-selection--single {
-  background-color: #fff;
-  border: 2px solid #fff;
-  height: 50px;
+  background-color: #f7f7f7;
+  border: 2px solid #f7f7f7;
+  height: 45px;
   width: 100%;
   padding: 0 25px;
   border-radius: 25px;
@@ -2402,7 +2403,7 @@ select {
 }
 
 .select2-container .select2-dropdown {
-  background-color: #fff;
+  background-color: #f7f7f7;
   border: none;
   border-radius: 0;
   overflow: hidden;
@@ -2417,8 +2418,8 @@ select {
   width: 100%;
   height: 40px;
   border-radius: 20px;
-  background-color: #fff;
-  border: 2px solid #21227e;
+  background-color: #f7f7f7;
+  border: 2px solid #a748b4;
   font-size: 14px;
   font-weight: 400;
   color: #808080;
@@ -2456,7 +2457,7 @@ select {
 }
 
 .select2-container .select2-search--dropdown .select2-search__field:focus {
-  border-color: #21227e;
+  border-color: #a748b4;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -2467,7 +2468,7 @@ select {
 
 .select2-container .select2-results > .select2-results__options {
   scrollbar-width: thin;
-  scrollbar-color: #a748b4 #21227e;
+  scrollbar-color: #21227e;
 }
 
 .select2-container
@@ -2497,13 +2498,13 @@ select {
 
 .select2-container .select2-results__option:hover {
   background-color: transparent;
-  color: #21227e;
+  color: #a748b4;
 }
 
 .select2-container
 .select2-results__option.select2-results__option--highlighted.select2-results__option--selectable {
   background-color: transparent;
-  color: #21227e;
+  color: #a748b4;
 }
 
 .select2-container.select2-container--open.select2-container--below
@@ -2512,11 +2513,11 @@ select {
 }
 
 .select2-container--open .select2-selection.select2-selection--single {
-  border: 2px solid #fff;
+  border: 2px solid #e6e6e6;
 }
 
 .select2-container.select2-container--open .select2-dropdown--below {
-  border: 2px solid #fff;
+  border: 2px solid #e6e6e6;
   border-top: 0;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -2524,7 +2525,7 @@ select {
 }
 
 .select2-container.select2-container--open .select2-dropdown--below {
-  border-top-color: #fff;
+  border-top-color: #e6e6e6;
 }
 
 .select2-container.select2-container--open
@@ -2534,7 +2535,7 @@ select {
 }
 
 .select2-container.select2-container--open .select2-dropdown--above {
-  border-bottom-color: #fff;
+  border-bottom-color: #e6e6e6;
 }
 
 .select2-container.select2-container--open
@@ -2550,6 +2551,7 @@ select {
   outline: none;
 }
 
+/*select2 style*/
 /*select2 style*/
 .copy-right {
   display: -webkit-box;
