--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ html {
 }
 .influencer-flex {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   .swiper-slide {
     width: auto;
