--- a/css/sass/components/_influencer.scss
+++ b/css/sass/components/_influencer.scss
@@ -51,8 +51,9 @@
   @include flexx;
   text-align: center;
   color: $white-color;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 700;
+  font-size: 16px;
+  max-width: 180px;
   text-decoration: none !important;
   flex-direction: column;
   transition: all 0.3s ease-in-out;
@@ -63,6 +64,22 @@
   &:hover {
     color: $hover-color;
   }
+}
+.influencer-name {
+  // min-height: 44px;
+  // line-height: 22px;
+  margin-bottom: 8px;
+  text-align: center;
+  display: inline-block;
+}
+.influencer-title {
+  font-weight: 400;
+  font-size: 14px;
+  color: $white-color;
+  text-align: center;
+  line-height: 20px;
+  min-height: 46px;
+  display: inline-block;
 }
 .influencer-figure {
   display: -webkit-box;
@@ -178,6 +195,9 @@
     max-width: 90px;
     max-height: 90px;
   }
+  .influencer-name {
+    min-height: 48px;
+  }
 }
 .influencer-flex-parent ~ .swiper-pagination,
 .influencer-flex-parent ~ .swiper-btn,
@@ -200,6 +220,9 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+.influencer-flex {
+  align-items: flex-start;
 }
 .blogs-flex {
   display: grid;
