--- a/css/main.css
+++ b/css/main.css
@@ -1245,6 +1245,7 @@ html[dir="ltr"] .second-btn {
   border-radius: 15px;
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+  max-width: 360px;
 }
 
 .blog-head {
@@ -1554,8 +1555,9 @@ html[dir="ltr"] .second-btn {
           justify-content: center;
   text-align: center;
   color: #fff;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 700;
+  font-size: 16px;
+  max-width: 180px;
   text-decoration: none !important;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1573,6 +1575,22 @@ html[dir="ltr"] .second-btn {
 
 .influencer-ancor:hover {
   color: #a748b4;
+}
+
+.influencer-name {
+  margin-bottom: 8px;
+  text-align: center;
+  display: inline-block;
+}
+
+.influencer-title {
+  font-weight: 400;
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+  line-height: 20px;
+  min-height: 46px;
+  display: inline-block;
 }
 
 .influencer-figure {
@@ -1709,6 +1727,9 @@ html[dir="ltr"] .second-btn {
     max-width: 90px;
     max-height: 90px;
   }
+  .influencer-name {
+    min-height: 48px;
+  }
 }
 
 .influencer-flex-parent ~ .swiper-pagination,
@@ -1732,6 +1753,12 @@ html[dir="ltr"] .second-btn {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.influencer-flex {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .blogs-flex {
@@ -1810,31 +1837,26 @@ html[dir="ltr"] .second-btn {
 }
 
 .form-input[type="email"],
-.form-input[type="tel"],
-.form-input[type="number"] {
+.form-input[type="tel"] {
   text-align: left;
 }
 
 .form-input[type="email"]::-webkit-input-placeholder,
-.form-input[type="number"]::-webkit-input-placeholder,
 .form-input[type="tel"]::-webkit-input-placeholder {
   text-align: start;
 }
 
 .form-input[type="email"]:-ms-input-placeholder,
-.form-input[type="number"]:-ms-input-placeholder,
 .form-input[type="tel"]:-ms-input-placeholder {
   text-align: start;
 }
 
 .form-input[type="email"]::-ms-input-placeholder,
-.form-input[type="number"]::-ms-input-placeholder,
 .form-input[type="tel"]::-ms-input-placeholder {
   text-align: start;
 }
 
 .form-input[type="email"]::placeholder,
-.form-input[type="number"]::placeholder,
 .form-input[type="tel"]::placeholder {
   text-align: start;
 }
@@ -3259,9 +3281,9 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
