--- a/css/sass/components/_blog.scss
+++ b/css/sass/components/_blog.scss
@@ -13,6 +13,7 @@
   margin: 10px;
   border-radius: 15px;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+  max-width: 360px;
 }
 .blog-head {
   text-align: center;
